Using Volley to talk to Spotify web api

--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -14,4 +14,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
         android:onClick="authenticate" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get playlists!"
+        android:id="@+id/get_playlists_btn"
+        android:layout_marginTop="27dp"
+        android:layout_below="@+id/auth_btn"
+        android:layout_centerHorizontal="true"
+        android:onClick="getPlaylists" />
 </RelativeLayout>
