Manually adding the starred playlist (it does not work though)

--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="Get playlists!"
         android:id="@+id/get_playlists_btn"
-        android:onClick="getPlaylists"
+        android:onClick="getUsername"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
